
	  It appears that the sole users of this data are in src/system.c
	  (open_internal, save_internal).

	  I've found no documentation needing updating, according to
	  `rgrep -i extension doc'.

	* src/system.c (open_internal, save_internal): Minor effec tweaks:
	  fewer strlen calculations.

	* src/dialogs/transformation.c: Fix uninitialized-var bug.

2003-11-28 MenTaLguY <mental@rydia.net>

	* src/xml/repr-action-test.c, src/utest/utest.inc: made test
	  control structure a little clearer (hopefully) by hiding it.
          Also some initial Doxygenification of the unit testing stuff.

	* src/Makefile.am: added utest/ subdir

	* doc/architecture.svg: reworked architecture diagram a bit

	* doc/class-hierarchy.dia: added first shot at documenting the
	  class hierarchy in Dia

	* src/modules/svg.c, src/modules/win32.c: change "...with
	  xmlns:sodipodi namespace" to "...with extension namespaces"

	* src/xml/repr-action.c: fixed log optimizer to check
	  SPReprAction::type before coalescing adjacent actions

2003-11-27 Bryce <bryce@osdl.org>
	* doc/architecture.svg: Added architecture.svg to try to capture
	  the subsystems at a block layer level.  Defining colors, working
	  up basic structure, etc.
	* Adding defines, functions, etc. for allowing markers into
	  inkscape-stock.h, sp-marker.*, sp-path.c, sp-shape.h, style.*,
	  and dialogs/stroke-style.c
	* Added some new UI utility functions to spw-utilities.* and
	  changed dialog/stroke-style.c to use them, in order to simplify
	  redundancies in the code a bit.

2003-11-27 MenTaLguY <mental@rydia.net>

	* src/desktop.c: the coord status bar area should not have a
	  resize handle

2003-11-27 bulia byak <bulia@dr.com>

	* all dialogs remember size and position across sessions
	* all dialogs are unsinkable (re-transientizing to the current document)
	* all dialogs are closeable by ctrl-f4 and ctrl-w, defocusable by esc
	* dialogs titles unified, added shortcut display in the titles
